// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination.Item /> should render Item with custom className/style 1`] = `
<li
  className="my-custom-class"
  style={
    Object {
      "top": 0,
    }
  }
>
  <a
    href="#"
    onClick={[Function]}
  />
</li>
`;

exports[`<Pagination.Item /> should render current Item 1`] = `
<li
  className="current"
  style={Object {}}
>
  <a
    href="#"
    onClick={[Function]}
  />
</li>
`;

exports[`<Pagination.Item /> should render disabled Item 1`] = `
<li
  className="disabled"
  style={Object {}}
>
  <span
    href=""
    onClick={null}
  />
</li>
`;
